--- a/omod/src/main/resources/defaultHeaderTemplate.html
+++ b/omod/src/main/resources/defaultHeaderTemplate.html
@@ -1,3 +1,3 @@
-<div class='col-sm-10 header_template'>
+<div class='header_template'>
     #{p.identifier} {p.fullName} (Gender: {p.gender} - Age {p.age})
 </div>
